# llm_reproducibility

./: .gitignore  README.md  eval_layercast.py  eval_main.py  eval_passk.py  fsdp_rl.sh  fsdp_rl_baseline.sh  fsdp_rl_bio.sh  fsdp_rl_tbik.sh  patch_vllm.py  pyproject.toml  simple_rl.py  verify_installation.py
evaluation/: README.md  eval_layercast.py  eval_main.py  eval_passk.py  eval_tbik.py  patch_layercast.py
evaluation/evals/batch/: tokenizer.py
evaluation/evals/util/: results.py
mini_allreduce/: README.md  __init__.py  cuda_wrapper.py  custom_all_reduce.py  custom_all_reduce_ops.py  custom_all_reduce_utils.py  setup.py  utils.py
mini_allreduce/csrc/: common_ops_allreduce.cc
mini_allreduce/sgl_kernel/csrc/allreduce/: custom_all_reduce.cu
mini_allreduce/tbik_kernel/: __init__.py  allreduce.py
mini_allreduce/tbik_kernel/csrc/allreduce/: custom_all_reduce.cu  custom_all_reduce.cuh
rl_torchtitan_vllm/: __init__.py  common.py  driver.py  rollout_server.py  train_worker.py
src/: __init__.py  utils.py
src/bio/: __init__.py  batch_invariant_ops.py
src/patch/: __init__.py  patch_batch_invariant.py  patch_tp_invariant.py  patch_training_inference_align.py
src/tbik/: __init__.py  tree_based_all_reduce.py
test_latency/: latency.sh  test_latency.py
tests/: bench_allreduce.py  test_custom_tree_allreduce.py
